fix: remove overflow hidden to html

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-html {
-  scroll-behavior: smooth;
-  overflow: hidden;
-}
 
 *{
   margin: 0;
@@ -9,7 +5,6 @@ html {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
-
 
 .wrapper {
   width: 100%;
@@ -21,7 +16,7 @@ html {
 }
 
 .warpper-designed {
-  height: 100vh;
+  height: 100%;
   background-image: url(./assets/myImg1.png);
   background-size: cover;
   display: flex;
